# gpu_analysis

./: README.md
official/: .gitignore  README.md
official/launcher/: report.py  run_with_real_data.py  scheduler.py  utils.py
official/launcher/conf/: config.yaml
official/launcher/conf/module/: activation_linear.yaml  flash_attn.yaml  fused_moe.yaml  linear.yaml  rms_norm_linear.yaml  sdpa.yaml
official/launcher/conf/op/: full_case.yaml
official/launcher/conf/op_test/: aten.yaml  distributed.yaml  ds-ops.yaml  flash_attn_v2.yaml  full_case.yaml  l3bandwidth.yaml  memory_ops.yaml  perf_test_ops.yaml  qwen.yaml  qwen2_5_32B.yaml  test.yaml  utilization.yaml
official/launcher/conf/run/: acc_check.yaml  fast_perf.yaml  nsys.yaml  nsys_shape.yaml  perf.yaml  real_data_check.yaml  test.yaml
official/launcher/conf/task/: distributions.yaml
official/launcher/conf/training/: base.yaml  tp1_1k.yaml  tp2_1k.yaml  tp2_1k_fp32.yaml  tp4_4k.yaml  tp8_4k.yaml
official/launcher/moprobe/: advanced_compare.py  algorithm.py  api_precision_standard.yaml  compare.py  compare_utils.py  npy_compare.py  utils.py
official/launcher/runner/module/: function.py
official/launcher/runner/op/: customer.py  data_loader.py  function.py  op_swapper.py
official/launcher/runner/training/: function.py  rms_norm.py
official/launcher/scripts/: dump_op_statistics.sh  dump_op_tensor.sh  install_torchtrace.sh  launcher.sh  run.sh
official/launcher/test/: test_ulp.py
official/launcher/tools/: __init__.py  csv_loader.py  default_env.sh  docker_exec.sh  host_run.sh
official/launcher/unitest/: allclose_default.py  check_hook.py  conftest.py  conftest2.py  test.sh  test_flash_attn.py  test_models.py  test_rms_norm.py  test_vllm_0.9.py  test_vllm_attention.py  test_vllm_decoder_attn.py  test_vllm_flashmla.py  test_vllm_fused_quant_layernorm.py  test_vllm_linear.py  test_vllm_moe.py  test_vllm_page_attention.py  utils.py
official/readout/model/: megatron.yaml
official/readout/model/deepseek_v2/: A100SXMML_deepseek_v2_A21B_n1e8bf16_1k_l2.yaml  A100SXMML_deepseek_v2_A21B_n1e8bf16_1k_l2_trace.txt
official/readout/model/deepseek_v3/: A100SXMML_deepseek_v3_n1e8bf16_4k_l2.yaml  A100SXM_deepseek_v3_node_limited_aux_loss_free_sigmoid_activation.yaml  H20SXM_megatron_deepseek_v3_training.yaml  H20SXM_vllm_deepseek_v3_inference.yaml  H800SXM_deepseek_v3_decoding_official.yaml  H800SXM_deepseek_v3_prefill_official.yaml  H800SXM_deepseek_v3_train_official.yaml  common_op_deepseek_v3.yaml
official/readout/model/janus_pro/: A100PCIETF_janus-pro-7b_Image_Unstanding_bf16_inference.yaml  H100PCIESF_Janus-Pro-7B_2K_BF16_Image_Unstanding_sft.yaml  H20SXMTF_Janus-pro-7b_Text_to_Image_bf16_resolution_384x384.yaml
official/readout/model/qwen2/: A100SXMNM_qwen2_32B_n1t8bf16_4k.yaml  (+1 more)
official/readout/model/qwen2.5_vl/: H20SXMVL_qwen2_5_vl_72b_instruct_layer2_flattn_bf16_tp2_seq32k_bs1_in4k_out5.yaml  H20SXMVL_qwen2_5_vl_72b_instruct_layer2_flattn_bf16_tp2_seq32k_training.yaml
official/theory/core/: __init__.py
official/theory/run/: __init__.py
official/theory/tests/: test_basic_op.py  test_load_bossa_nova.py  test_load_optest.py  test_nsys_loader.py  test_oplist_loader.py  test_optrace_loader.py  test_traced_op.py
official/trace/: MANIFEST.in  __init__.py  hooks.py  module.py  requirements.txt  setup.py  torch_api.py  utils.py  vllm_monkey_patch.py  vllm_plugin.py
official/trace/cudahook/: .clang-format  .gitignore  CMakeLists.txt  README.md  build.sh  gen_cpp.sh
official/trace/cudahook/2nd/: logging.cmake
official/trace/cudahook/2nd/elog/: efmt.h  elog.h  elog_api.h
official/trace/cudahook/common/: api_log.h  black_list.cpp  black_list.h  env_default.cpp  env_default.hpp  error_check_base.h  error_string.cpp  error_string.h  hook.h  log.h  macro_common.h  record.cpp  record.h  trace_profile.h  utils.cpp  utils.hpp
official/trace/cudahook/cublas/: CMakeLists.txt  gen.py  gen.sh  gen_cublasLt.py
official/trace/cudahook/cublas/cust/: declares.h
official/trace/cudahook/cublas/cust/dryrun/: blas.cpp  blasLt.cpp
official/trace/cudahook/cublasLt/: CMakeLists.txt  gen.py  gen.sh
official/trace/cudahook/cuda/: CMakeLists.txt  api_log.h  error_check.h  gen.py  gen.sh
official/trace/cudahook/cuda/cust/: declares.h
official/trace/cudahook/cuda/cust/dryrun/: cuda.cpp
official/trace/cudahook/cudart/: CMakeLists.txt  error_check.h  gen.py  gen.sh  gen_host_runtime.py  utilty.h
official/trace/cudahook/cudart/cust/: common.cpp  common.h  declares.h
official/trace/cudahook/cudart/cust/dryrun/: callCfgStack.cpp  callCfgStack.h  device_function.cpp  device_prop.cpp  device_prop.h  host_runtime.cpp  runtime_api.cpp
official/trace/cudahook/cudart/cust/native/: host_runtime.cpp  runtime_api.cpp
official/trace/cudahook/cufft/: CMakeLists.txt  gen.py  gen.sh
official/trace/cudahook/cupti/: CMakeLists.txt  gen.py  gen.sh
official/trace/cudahook/curand/: CMakeLists.txt  gen.py  gen.sh
official/trace/cudahook/cusparse/: CMakeLists.txt  gen.sh
official/trace/cudahook/dnn/: CMakeLists.txt  api_log.h  gen.py  gen.sh  graph.cpp
official/trace/cudahook/dnn/cust/: declears.h
official/trace/cudahook/dnn/cust/dryrun/: graph.cpp
official/trace/cudahook/header/include/x86_64-linux-gnu/: cudnn_graph.h
official/trace/cudahook/header/local/cuda-12.4/targets/x86_64-linux/include/: cublas_api.h  cusparse.h
official/trace/cudahook/nccl/: CMakeLists.txt  error_check.h  gen.py  gen.sh
official/trace/cudahook/nccl/cust/: declares.h
official/trace/cudahook/nccl/cust/dryrun/: nccl.cpp
official/trace/cudahook/nvml/: CMakeLists.txt  error_check.h  gen.py  gen.sh
official/trace/cudahook/nvml/cust/: declares.h
official/trace/cudahook/nvml/cust/dryrun/: nvml.cpp
official/trace/optrace/: CMakeLists.txt  README.md  torch_dispatch.py  torchtrace.py
official/trace/optrace/pybind11/: optrace_pybind.cc
official/trace/optrace/sample/: parse_log_file.py  parse_log_string.py  sample.cc  sample.py
official/trace/optrace/src/: optrace.cc  optrace.h
(+175 files in other folders)
